--- a/biome.json
+++ b/biome.json
@@ -1,9 +1,22 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"files": {
+		"include": [
+			"**/*.js",
+			"**/*.ts",
+			"**/*.jsx",
+			"**/*.tsx",
+			"**/*.cjs",
+			"**/*.cts",
+			"**/*.mjs",
+			"**/*.mts"
+		],
+		"ignore": ["**/node_modules/**", "**/dist/**", "**/build/**"]
+	},
 	"formatter": { "enabled": true },
-	"organizeImports": { "enabled": false },
+	"organizeImports": { "enabled": true },
 	"linter": {
-		"enabled": false,
+		"enabled": true,
 		"rules": { "recommended": false },
 		"ignore": ["dist"]
 	},
