--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-switch": "^1.1.2",
 		"@types/node": "^22.10.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -51,6 +52,8 @@
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"eslintConfig": {
-		"extends": ["plugin:storybook/recommended"]
+		"extends": [
+			"plugin:storybook/recommended"
+		]
 	}
 }
