--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
 	},
 	"dependencies": {
 		"@biomejs/biome": "^1.9.4",
+		"@radix-ui/react-checkbox": "^1.1.3",
+		"@radix-ui/react-label": "^2.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-switch": "^1.1.2",
 		"@types/node": "^22.10.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"lucide-react": "^0.471.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"tailwind-merge": "^2.6.0"
